--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Faiz Bachoo Shah",
   "license": "MIT",
   "dependencies": {
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "peer": "^0.6.1",
     "socket.io": "^4.1.2"
