--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
     "socket.io-client": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
