--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "http-proxy": "^1.18.1",
     "peer": "^0.6.1",
     "socket.io": "^4.1.2"
   },
