--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   "author": "Faiz Bachoo Shah",
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^6.2.0",
+    "concurrently": "^6.3.0",
     "express": "^4.17.1",
-    "http-proxy": "^1.18.1",
-    "peer": "^0.6.1",
-    "socket.io": "^4.1.2"
+    "peer": "^0.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.13"
   },
   "engines": {
     "node": "12.16.3"
