--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "concurrently": "^6.3.0",
     "express": "^4.17.1",
-    "peer": "^0.6.1"
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
